# inventory-management

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 763974d96fd1_category.py
inventory_management/: __init__.py  main.py
inventory_management/models/: __init__.py  category.py
tests/: __init__.py
